src/sass/base/_forms.scss
@use "../abstracts" as *;

input,
textarea,
select {
	background-color: rgba(255, 255, 255, 0.2);
	border: none;
	outline: 0;
	padding: var(--space-xs);
	color: var(--white);
	width: 100%;
	margin-bottom: var(--space-s);
	transition: 0.2s all ease-in-out;

	&:hover {
		background-color: rgba(255, 255, 255, 0.4);
	}

	&:focus {
		background-color: rgba(255, 255, 255, 1);
		color: var(--black);
	}

	&[type="submit"] {
		width: auto;
		margin-left: auto;
		appearance: none;
	}
}

form {
	display: flex;
	flex-wrap: wrap;
	/* gap: 1rem; */

	> div {
		flex: 1;
		min-width: 100%;

		&:has(div) {
			@include min(md) {
				display: flex;
				gap: 1.5em;

				div {
					flex: 1;
				}
			}
		}
	}
}

